# wassilly

./: .gitignore  Dockerfile  INSTALL.md  README.md  ciao.dot  dune-project  fib_return.wasm  filename.txt  log.txt  wassilly.opam
lib/: call.ml  constraint.ml  dune  eval.ml
lib/.monolith/: cache.ml  flags.ml  math.ml  value.ml
lib/.segalang/: dune  expr_cons.ml  instructions.ml  iterate.ml  label.ml  labelstack.ml  operand.ml  scg.ml  stack.ml  stackwidening.ml  value.ml
lib/SFL/: cache.ml  dune  env.ml  input.ml  interpreter.ml  language.ml  output.ml  scg.ml  value.ml
lib/_SFL/: cacheddata.ml  input.ml  interpreter.ml  language.ml  stack.ml  value.ml
lib/_generic/: _dune  alloc.ml  cacheddata.ml  interpreter.ml  stack.ml  value.ml
lib/arrow/: arrow.ml  dune
lib/ds/: abstractbit.ml  abstractbyte.ml  aexpr.ml  aprondomain.ml  apronhelper.ml  bitwisenumber.ml  callgraph.ml  dune  linmemmap.ml  liststack.ml  mapping.ml  monad.ml  tuple.ml
lib/fixpointlogic/: answer.ml  cache.ml  call.ml  callset.ml  dune  iterate.ml  labelmap.ml  stack.ml  stackwidening.ml
lib/generic/: alloc.ml  cache.ml  combinator.ml  dune  (+8 more)
test/: binary_tc.ml  cg_closed.ml  cg_mattia.ml  cg_open.ml  cg_value_fibs.ml  cg_value_spec.ml  cg_valueanalysis.ml  data_test.ml  dune  fact.ml  fib.ml  fibdiv.ml  fibmix.ml  fibn.ml  fibtop.ml  if_segalang.ml  peano.ml  segalang_br.ml  segalang_br_harder.ml  segalang_brif_loop.ml  segalang_fib.ml  segalang_loop_if.ml  silly.ml  silly_segalang.ml  test_chaotic_implicitgraph.ml  test_wasm_closed.ml  test_wasm_open.ml  test_wassilly.ml  value_tc.ml
(+309 files in other folders)
